src/components/sass/thumb.scss
@import '../../../node_modules/sass-mediaqueries/_media-queries';

.photo-thumb {
  vertical-align: middle;

  padding-left: 0;
  padding-right: 0;
  margin: 15px auto;
  box-shadow: 0 0 12px rgba(0, 0, 0, 0.3);

  &:hover {
    background-color: rgba(0, 0, 0, 0.2);
    cursor: pointer;
    box-shadow: 0 0 12px rgba(0, 0, 0, 0.6);
  }

  @include max-screen(1024px) {
    transform-origin: center center;
    transform: scale(0.85);
  }
}

